--- a/Demos/index.html
+++ b/Demos/index.html
@@ -10,12 +10,12 @@
 	
 	<script type="text/javascript">
 		
-		Element.defineCustomEvent('meta', {
+		Element.defineCustomEvent('alt', {
 
 			base: 'keydown',
 
 			condition: function(event){
-				return !!event.meta;
+				return !!event.alt;
 			},
 
 			onSetup: function(fn, name){
@@ -29,9 +29,9 @@
 		});
 
 
-		Element.defineCustomEvent('meta+control', {
+		Element.defineCustomEvent('alt+control', {
 
-			base: 'meta',
+			base: 'alt',
 
 			condition: function(event){
 				return !!event.control;
@@ -43,7 +43,7 @@
 
 		});
 		
-		var name = 'meta+control';
+		var name = 'alt+control';
 		var empty = function(){};
 		var calls = 0, listener = function(){
 			console.log('fired ' + name);
@@ -59,9 +59,9 @@
 		document.addEvent(name, empty);
 		document.addEvent(name, listener);
 
-		Element.defineCustomEvent('meta+control+shift', {
+		Element.defineCustomEvent('alt+control+shift', {
 
-			base: 'meta+control',
+			base: 'alt+control',
 
 			condition: function(event){
 				return !!event.shift;
@@ -77,7 +77,7 @@
 
 		});
 		
-		var subName = 'meta+control+shift';
+		var subName = 'alt+control+shift';
 		document.addEvent(subName, function(){
 			console.log('+firing ' + subName);
 		});
