--- a/Demos/index.html
+++ b/Demos/index.html
@@ -9,13 +9,14 @@
 	<script type="text/javascript" src="../Source/Element.defineCustomEvent.js"></script>
 	
 	<script type="text/javascript">
-		
-		Element.defineCustomEvent('alt', {
+		(function(){
+
+		Element.defineCustomEvent('control', {
 
 			base: 'keydown',
 
 			condition: function(event){
-				return !!event.alt;
+				return !!event.control;
 			},
 
 			onSetup: function(fn, name){
@@ -29,12 +30,12 @@
 		});
 
 
-		Element.defineCustomEvent('alt+control', {
+		Element.defineCustomEvent('control+alt', {
 
-			base: 'alt',
+			base: 'control',
 
 			condition: function(event){
-				return !!event.control;
+				return !!event.alt;
 			},
 
 			onSetup: function(fn, name){
@@ -43,7 +44,7 @@
 
 		});
 		
-		var name = 'alt+control';
+		var name = 'control+alt';
 		var empty = function(){};
 		var calls = 0, listener = function(){
 			console.log('fired ' + name);
@@ -52,6 +53,11 @@
 				document.removeEvent(name, listener);
 				(function(){
 					document.removeEvent(name, empty);
+
+					// More fancy testing
+					(function(){
+						document.addEvent(name, empty).removeEvent(name, empty);
+					}).delay(1000);
 				}).delay(1000);
 			}
 		};
@@ -59,9 +65,9 @@
 		document.addEvent(name, empty);
 		document.addEvent(name, listener);
 
-		Element.defineCustomEvent('alt+control+shift', {
+		Element.defineCustomEvent('control+alt+shift', {
 
-			base: 'alt+control',
+			base: 'control+alt',
 
 			condition: function(event){
 				return !!event.shift;
@@ -77,7 +83,7 @@
 
 		});
 		
-		var subName = 'alt+control+shift';
+		var subName = 'control+alt+shift';
 		document.addEvent(subName, function(){
 			console.log('+firing ' + subName);
 		});
@@ -99,12 +105,13 @@
 		document.addEvent('shift', function(){
 			console.log('~firing: shift');
 		});
-		
+
+		})();
 	</script>
 </head>
 <body>
 <div>
-	Test.
+	Open your console (Firebug, Web Inspector, ...) and press either alt+control, alt+control+shift or shift to see some fancy output.
 </div>
 </body>
 </html>
