* New onEnable/onDisable methods on custom events. Much better handling of the enable/disable functions since a lot of custom events don't even have a base event.

--- a/Demos/index.html
+++ b/Demos/index.html
@@ -30,18 +30,25 @@
 		});
 
 
+		var isEnabled = true;
 		Element.defineCustomEvent('control+alt', {
 
 			base: 'control',
-
-			cancelable: true,
 			
 			condition: function(event){
-				return !!event.alt;
+				return isEnabled && !!event.alt;
 			},
 
 			onSetup: function(fn, name){
 				console.log('-setup: ' + name);
+			},
+
+			onEnable: function(){console.log('yo');
+				isEnabled = true;
+			},
+
+			onDisable: function(){
+				isEnabled = false;
 			}
 
 		});
